# dmovie2511

./: .gitignore  AGENTS.md  README.md  automate.py  download_models.py  generate_video.py  pyproject.toml  requirements.md  start_server.py  status.md
automation/: README.md  __init__.py  __main__.py  cli.py  core.py  models.py  script.py  tracking.py  workflows.py
config/: workflows.yaml
docs/: requirements.md  rules.md  status.md
docs/onboardingarticles/: animate.md  entry.md  flowmatching.md  vram.md  wan.md  wanseries
