[project]
name = "comfyui-automation"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "comfyui-frontend-package==1.28.8",
    "comfyui-workflow-templates==0.2.4",
    "comfyui-embedded-docs==0.3.1",
    "torch",
    "torchsde",
    "torchvision",
    "torchaudio",
    "numpy>=1.25.0",
    "einops",
    "transformers[timm]>=4.45.0",
    "tokenizers>=0.13.3",
    "sentencepiece>=0.2.0",
    "safetensors>=0.4.2",
    "aiohttp>=3.11.8",
    "yarl>=1.18.0",
    "pyyaml",
    "Pillow",
    "scipy",
    "tqdm",
    "psutil",
    "alembic",
    "SQLAlchemy",
    "av>=14.2.0",
    "kornia>=0.7.1",
    "spandrel",
    "pydantic~=2.0",
    "pydantic-settings~=2.0",
    "ftfy",
    "accelerate>=1.2.1",
    "diffusers>=0.33.0",
    "peft>=0.17.0",
    "protobuf",
    "pyloudnorm",
    "gguf>=0.17.1",
    "opencv-python",
    "pyjwt",
    "httpx",
    "imageio-ffmpeg",
    "huggingface_hub>=0.25.2",
    "ninja~=1.11.1.4",
    "comfy-script[default]",
]
